--- a/Untitled3.ipynb
+++ b/Untitled3.ipynb
@@ -251,7 +251,7 @@
         "print(list1[-1])\n",
         "print(list1[-8])"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,11 +282,11 @@
       "metadata": {
         "id": "0gxoX4LQ5S2l",
         "colab_type": "code",
+        "outputId": "5013b5a3-d557-4995-8118-d2807e55b28d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "5013b5a3-d557-4995-8118-d2807e55b28d"
+        }
       },
       "source": [
         "list1=[\"anil\",\"sai\",\"ram\"]\n",
@@ -299,7 +299,7 @@
         "print(list2)\n",
         "print(list1+list2)"
       ],
-      "execution_count": 40,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -329,11 +329,11 @@
       "metadata": {
         "id": "crMCoCua9Bpc",
         "colab_type": "code",
+        "outputId": "ccd6c22f-94bf-42d5-fc03-d717aa7ef32f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "ccd6c22f-94bf-42d5-fc03-d717aa7ef32f"
+        }
       },
       "source": [
         "list1=[1,5,3,4,5,62,4]\n",
@@ -345,7 +345,7 @@
         "print(list1)\n",
         "print(list1.count(1))"
       ],
-      "execution_count": 50,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,11 +375,11 @@
       "metadata": {
         "id": "brWhXkT1J0yd",
         "colab_type": "code",
+        "outputId": "9813eb1a-ad68-4719-bebe-bb6d712ef9e5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 102
-        },
-        "outputId": "9813eb1a-ad68-4719-bebe-bb6d712ef9e5"
+        }
       },
       "source": [
         "list1=[\"gitam\",\"python\",\"c\",\"raptor\"]\n",
@@ -392,7 +392,7 @@
         "list1.reverse()\n",
         "print(list1)"
       ],
-      "execution_count": 56,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -422,11 +422,11 @@
       "metadata": {
         "id": "xHDjg_isSoCk",
         "colab_type": "code",
+        "outputId": "7561b421-2717-465c-f8d6-74e84dabe820",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7561b421-2717-465c-f8d6-74e84dabe820"
+        }
       },
       "source": [
         "def linearsearch(a,taritem):\n",
@@ -442,7 +442,7 @@
         "a=[1,3,4,6,5,0]\n",
         "linearsearch(a,5)"
       ],
-      "execution_count": 64,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -468,11 +468,11 @@
       "metadata": {
         "id": "fOK9xzstWQHH",
         "colab_type": "code",
+        "outputId": "864c77c6-80b0-4220-f340-bb6b845c371f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
-        },
-        "outputId": "8454a70f-30cc-4bc3-a94a-5c61016ba5a9"
+        }
       },
       "source": [
         "def linearsearchduplicate(a,taritem):\n",
@@ -485,7 +485,7 @@
         "a=[2,4,5,6,7,7] \n",
         "linearsearchdupilcate(a,7)"
       ],
-      "execution_count": 67,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "error",
@@ -494,11 +494,185 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-67-20797956a21e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mlinearsearchdupilcate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-69-20797956a21e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m   \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflag\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mlinearsearchdupilcate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;31mNameError\u001b[0m: name 'linearsearchdupilcate' is not defined"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "03qtWZfQqQQp",
+        "colab_type": "text"
+      },
+      "source": [
+        "#example1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "G-vuDHqIqjTY",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "bcd36e90-b5e5-422b-8236-2de801088c34"
+      },
+      "source": [
+        "def linearexample1(a,taritem):\n",
+        "  flag=0;\n",
+        "  for i in range(len(a)):\n",
+        "    if a[i]==taritem:\n",
+        "      flag=1;\n",
+        "      break\n",
+        "  if(flag!=0):\n",
+        "        print(\"target item is found\")\n",
+        "  else:\n",
+        "          print(\"target item is not found\")\n",
+        "a=[1,5,9,6,5,15,12,5]\n",
+        "linearexample1(a,5)\n",
+        " "
+      ],
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "target item is found\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "o14CWe_jsXkt",
+        "colab_type": "text"
+      },
+      "source": [
+        "#EXAMPLE"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X32Uze7os-9O",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "961ffb34-56ce-49be-c82c-9b1fdfd28a92"
+      },
+      "source": [
+        "def linearsearchexample2(a,taritem):\n",
+        "    for i in range(len(a)):\n",
+        "      if a[i]==taritem:\n",
+        "          j=0\n",
+        "          while j!=i+1:\n",
+        "              print(\"!\",end=\" \")\n",
+        "              j=j+1\n",
+        "          print(end=\" \")\n",
+        "        \n",
+        "        \n",
+        "a=[1,3,4,6,4,5]\n",
+        "linearsearchexample2(a,3)"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "! !  "
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Jm7u9fnpzIfp",
+        "colab_type": "text"
+      },
+      "source": [
+        "#example4"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oBxyKJUMzRsJ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        },
+        "outputId": "42cae829-986f-42ea-952a-bbdb1e30d5e8"
+      },
+      "source": [
+        "def examle3(a):\n",
+        "    sum=0;\n",
+        "  for i in range(len(a)):\n",
+        "      if a[i]%3==0 and a[i]%5==0;\n",
+        "         sum=sum+a[i]\n",
+        "  return sum\n",
+        "a=[15,8.45,15]\n",
+        "example(a)"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-88-fd54286ec5e9>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    for i in range(len(a)):\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MFLM0Pzc6GNy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def linearformatedoutpu(a);\n",
+        "    for i in range(len(a)):\n",
+        "        if i[a]"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9mQmui1hIzRD",
+        "colab_type": "text"
+      },
+      "source": [
+        "#number conversion"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VslQtzLqJJXS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def numberconversion     "
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
